index.css
*{
    margin:0;
    font-family: Arial,sans-serif;
    box-sizing: border-box;

}
.navbar{
    height: 60px;
    background:black;
    color:white;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    border-top-right-radius:8px;

    position: fixed;   
    top: 0;          
    left: 0;
    width: 100%;       
}
.nav-logo{
    height: 50px;
    width: 100px; 
}
.logo{
    background-image:url("navsection_image/images.png");
    height: 50px;
    width: 100%;
    background-size: cover;
    
}
.border{
    border:2px solid transparent;
}
.border:hover{
    border:1.5px solid white;
}
.add-first{
    color:#cccccc;
    font-size: 0.85rem;
    margin-left: 20px;
}
.add-second{
  font-size: 1rem;  
}
.add-icon{
    display: flex;
    align-items: center;

}
.nav-search{
    display: flex;
    justify-content: space-evenly;
    background-color: rgb(225, 190, 63);
    width: 900px;
    height:40px;
    border-radius: 3px;  
}
.nav-search:hover{
    border:2px solid orange;
}
.search-select{
    background-color: #f3f3f3;
    width: 50px;
    text-align: center;
    border-top-left-radius:3px;
    border-bottom-left-radius:3px;
    border: none;

}
.search-input{
   width: 804px;
   font-size:1rem;
   border: none;
   
}
.search-icon{
    width: 45px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.2rem;

}
span{
    font-size: 0.7rem;
}
.nav-second{
    font-size: 0.85rem;
    font-weight: 700;
}
.nav-cart i{
   font-size: 25px;
}
.nav-cart{
    font-size: 0.8rem;
    font-weight: 700;
}

.pannel{
    height: 40px;
    background-color:#232f3e ;
    color: white;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    margin-top:60px;
}
.pannel-opt p{
    display: inline;
    font-size:0.85em;
    margin-left: 15px;
    font-weight: bold;
}
.pannel-opt{
    width: 70%;
    font-size: 0.85rem;

}
.pannelprime {
   height: 40px;

}
.hero-section{
   background-image: url("navsection_image/Budgetunrecamaz.jpg");
   height: 350px;
   background-size: cover;

}
.shop-section{
  display:flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  background-color: #e2e6e6;
}
.box{
    height:400px;
    width: 23%;
    background-color: white;
    padding: 10px 0 15px;
    border-radius: 2px;
    box-shadow: #232f3e;
    color: black;
    margin-bottom:15px;
}
.boxh{
    margin-left:12px;
}
.imagebox{
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    flex-wrap: wrap;
    height:83%; 
    margin-top:10px;
    margin-left:0.3rem;
    margin-right:0.8rem;
    row-gap:8px;
}
.image{
    width:46%;
    height:50%;
    overflow: hidden;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}
.image img{
    width:100%;
    height:100%;
    object-fit:cover;
}
.deals{
    margin-top: 15px;
    font-size: 13px;
    font-weight:bold;
}
.boxcommon{
    height:300px;
    width:100%;
    background-color: white;
    padding: 10px 0 15px;
    border-radius: 2px;
    box-shadow: #232f3e;
    color: black;
    margin-bottom:15px;
    margin-left:22px;
    margin-right:22px;
}
.history{
    height:650px;
    background-color: white;
    border: 1px solid #DDD;
    border-radius: 5px;
    margin-top:15px;
    margin-bottom:15px;

}
.histdata{
    display: flex;
    flex-wrap: wrap;
    border-radius: 2px;
    margin-bottom:15px;
    margin-left:22px;
    margin-right:22px;
    margin-top:15px;
    margin-bottom:15px;
}
.dataitem{
    width:100%;
    display: flex;
    justify-content: space-between;
    padding-bottom:50px;
    padding-top:50px;
    border-bottom: 1px solid #DDD;

}
.signnew{
    width:100%;
    display: flex;
    flex-direction: column;
    justify-content:center;
    align-items: center;
    padding-top: 40px;
}
.btn button{
    border-radius:20px;
    width:240px;
    height:2rem;
    background-color: #f9d43f;
    border: #f9d43f;
}
.btn button:hover{
    background-color:#ffce12;
}

.foot-pannel1{
    background-color: #37475a;
    color:white;
    height:50px;
    display: flex;
    justify-content:center;
    align-items: center;
    font-size:0.85rem;
}
.foot-pannel2{
    background-color: #222f3d;
    color:white;
    height: 380px;
    display: flex;
    justify-content: space-evenly;



}
ul{
    margin-top:50px;
}
ul a{
  display: block;
  font: size 0.85rem;
  margin-top:8px;
  color:#dddddd;
}
ul a:hover{
    text-decoration: underline;
}
.foot-pannel3{
    background-color: #222f3d;
    color: white;
    border-top: 1px solid #DDD;
    height:68px;
    display: flex;
    justify-content: center;
    align-items: center;
}
.logo{
    background-image:url("navsection_image/images.png");
    height: 50px;
    background-size: cover;
    width:100px;   
}
.panel3f{
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: black;
    padding-right:15px;
}
.btn2{
    padding-top:10px;
    margin:5px;
}
.btn2 button{
    background-color:black;
    border: 1px solid rgb(227, 225, 225);
    color: rgb(227, 224, 224);
    height:30px;
    border-radius:4px;
}
.foot-pannel4{
    background-color:black;
    color:white;
}
.panel4f{
    width: 100%;
    margin-left:120px;
}
.p4f{
  display:flex;
}
.p4f ul{
    font-size: 0.7rem;
    display:flex;
    flex-direction: column;
}
.infosection{
    height:76px;
}
.pages{
    font-size: 0.7rem;
    text-align: center;
    padding-top:25px; 
}
.copyright{
    padding:5px;
    font-size: 0.7rem;
    text-align: center;
}
.pages a{
    margin-left:10px;
}
.pages a:hover{
    text-decoration:underline ;
}

